<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>de.kune.easyvote</groupId>
  <artifactId>easyvote</artifactId>
  <packaging>war</packaging>
  <version>3.1-SNAPSHOT</version>
  <name>EasyVote</name>
  <description>
    Build WAR file: 
    mvn clean package
    Run in tomcat:
    mvn clean package tomcat7:run
    Run in DEV mode: 
    mvn clean package gwt:run -DrunTarget=manager.html 
  </description>

  <properties>
    <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>

    <maven.tomcat.port>8080</maven.tomcat.port>
    <maven.tomcat.ajp.port>8182</maven.tomcat.ajp.port>
    <maven.tomcat.path>/</maven.tomcat.path>

    <!-- Convenience property to set the GWT version -->
    <gwtVersion>2.9.0</gwtVersion>

    <!-- GWT needs at least java 1.6 -->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.gwt</groupId>
        <artifactId>gwt</artifactId>
        <version>${gwtVersion}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-servlet</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-user</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.google.gwt</groupId>
      <artifactId>gwt-dev</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.googlecode.gwt-charts</groupId>
      <artifactId>gwt-charts</artifactId>
      <version>0.9.10</version>
    </dependency>

    <dependency>
      <groupId>de.novanic.gwteventservice</groupId>
      <artifactId>gwteventservice</artifactId>
      <version>1.2.1</version>
    </dependency>

    <dependency>
      <groupId>net.glxn.qrgen</groupId>
      <artifactId>javase</artifactId>
      <version>2.0</version>
    </dependency>
  </dependencies>

  <build>
    <!-- Output classes directly into the webapp, so that IDEs and "mvn process-classes" 
      update them in DevMode -->
    <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

    <plugins>

      <!-- GWT Maven Plugin -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>gwt-maven-plugin</artifactId>
        <version>2.9.0</version>
        <executions>
          <execution>
            <id>gwt:generateAsync</id>
            <goals>
              <goal>generateAsync</goal>
            </goals>
            <phase>generate-sources</phase>
          </execution>
          <execution>
            <id>gwt:compile</id>
            <goals>
              <goal>compile</goal>
            </goals>
            <phase>prepare-package</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.3</version>
        <executions>
          <execution>
            <id>war:war</id>
            <goals>
              <goal>war</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.tomcat.maven</groupId>
        <artifactId>tomcat7-maven-plugin</artifactId>
        <version>2.0</version>
        <configuration>
          <warSourceDirectory>${project.build.directory}/${project.build.finalName}</warSourceDirectory>
          <systemProperties>
            <JAVA_OPTS>-XX:MaxPermSize=256m</JAVA_OPTS>
          </systemProperties>
        </configuration>
        <executions>
          <execution>
            <id>tomcat7:exec-war</id>
            <goals>
              <goal>exec-war</goal>
            </goals>
            <phase>package</phase>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.spotify</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>0.4.3</version>
        <configuration>
          <imageName>kune/easyvote</imageName>
          <baseImage>kune/java8</baseImage>
          <entryPoint>["java", "-jar", "/${project.build.finalName}-war-exec.jar"]</entryPoint>
          <!-- copy the service's jar file from target into the root directory of the image -->
          <resources>
            <resource>
              <targetPath>/</targetPath>
              <directory>${project.build.directory}</directory>
              <include>${project.build.finalName}-war-exec.jar</include>
            </resource>
          </resources>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
